# salary-fastapi-project

./: .env  .env-non-dev  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_06_22_1258_initial_migration.py  2023_06_22_1320_add_employee_date_s.py  2023_06_22_1748_remove_date_emp.py  2023_06_22_1804_job_title_unique.py  2023_06_22_1840_role_perm_update.py  2023_06_22_1841_role_title_upg.py  2023_06_23_0955_role_remove_perm_col.py  2023_06_23_1006_remove_role_tables.py  2023_06_23_1009_remove_role_tables_2.py  2023_06_23_1128_uncomment_date_columns_in_emp.py  2023_06_23_1309_change_datetime_str.py  2023_06_23_1316_change_datetime_str_2.py  2023_06_23_1324_change_str_datetime.py  2023_06_23_1336_add_utc_suffix.py  2023_06_23_2043_add_unique_flag_to_username.py
src/: config.py  database.py  exceptions.py  main.py  main_cache.py  main_users.py  models.py  response.py
src/auth/: auth.py  models.py  schemas.py  user_manager.py
src/job/: models.py  routers.py  schemas.py
src/role/: models.py  routers.py  schemas.py
src/user_employee/: models.py  routers.py  schemas.py
tests/: auth_test.py  conftest.py  superuser_test.py  user_employee_test.py
